--- a/about_cin.html
+++ b/about_cin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://www.cin-framework.com/favicon.ico" rel="icon" type="image/x-icon"/>
-    <title>CIN Framework</title>
+    <title>About CIN</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="./assets/css/style-min.css">
 </head>
