--- a/main.html
+++ b/main.html
@@ -22,40 +22,182 @@
         </div>
     </header>
     <main class="cin-main">
-        <div class="cin-coming-soon cin-fade-in">
-            <div class="cin-hero-badge">
-                <span data-translate="status_badge"></span>
+        <!-- Hero Section -->
+        <section class="cin-text-center cin-mb-8">
+            <!-- Hero Badge -->
+            <div class="cin-hero-badge cin-mb-4">
+                <span data-translate="main_v2_hero_badge">🚀 CIN FRAMEWORK - WEB 4</span>
             </div>
-            <h1 class="cin-heading-1" data-translate="coming_soon"></h1>
-            <p class="cin-text-lead cin-mb-8" data-translate="coming_soon_subtitle">
-            </p>
-            <div class="cin-heading-3 cin-mb-4" >
-                <img src="./assets/img/CIN.svg" alt="" srcset="" width="150" height="150">
+            
+            <!-- Main Heading -->
+            <h1 class="cin-heading-1 cin-mb-4" data-translate="main_v2_title">CIN FRAMEWORK</h1>
+            <h2 class="cin-heading-4 cin-text-primary cin-mb-4" data-translate="main_v2_subtitle">WEB 4 – POWERED BY LOCAL SELF-SUFFICIENCY AND AGGRESSIVE SECURITY</h2>
+            <p class="cin-text-lead cin-mb-8 cin-mx-auto" style="max-width: 800px;" data-translate="main_v2_description">An advanced PHP framework designed to simplify the creation of high-performance, dynamic systems and websites. CIN Framework focuses on local self-sufficiency, aggressive security, and full developer flexibility.</p>
+            
+            <!-- Framework Logo -->
+            <div class="cin-mb-8">
+                <img src="./assets/img/CIN.svg" alt="CIN Framework Logo" width="250" height="250">
             </div>
-            <p class="cin-tagline" data-translate="tagline">
-            </p>
-            <div class="cin-subscription">
-                <h3 class="cin-heading-5 cin-text-center cin-mb-8" data-translate="subscription_title">
-                </h3>
-                <form class="cin-input-group cin-max-w-md cin-mx-auto" onsubmit="handleEmailSubmitWithCaptcha(event)">
-                    <input 
-                        type="email" 
-                        class="cin-input" 
-                        data-translate-placeholder="email_placeholder" 
-                        placeholder="Enter your email" 
-                        required
-                    >
-                    <button type="submit" class="cin-btn cin-btn-primary" data-translate="notify_button">
-                    </button>
-                </form>
-                <div id="subscriptionMessage" style="display: none; margin-top: var(--cin-space-4);" class="cin-alert cin-alert-info"></div>
+        </section>
+
+        <!-- Features Section -->
+        <section class="cin-mb-8">
+            <div class="cin-text-center cin-mb-8">
+                <h3 class="cin-heading-2" data-translate="main_v2_features_title">Core Features</h3>
             </div>
-            <div class="cin-alert cin-alert-info">
-                <strong data-translate="info_title"></strong>
-                <span data-translate="info_message">
-                </span>
+            <div class="cin-grid cin-grid-cols-1 cin-md-grid-cols-2 cin-lg-grid-cols-4 cin-gap-6">
+                 <div class="cin-card cin-text-center">
+                     <h4 class="cin-heading-5 cin-mb-4" data-translate="main_v2_feature_1_title">🔥 Superior Performance</h4>
+                     <p class="cin-text-muted" data-translate="main_v2_feature_1_desc">Optimized execution speed and parallel processing for maximum efficiency.</p>
+                 </div>
+                 <div class="cin-card cin-text-center">
+                     <h4 class="cin-heading-5 cin-mb-4" data-translate="main_v2_feature_2_title">🛡️ Aggressive Security</h4>
+                     <p class="cin-text-muted" data-translate="main_v2_feature_2_desc">Advanced security measures that attack vulnerabilities before they can be exploited.</p>
+                 </div>
+                 <div class="cin-card cin-text-center">
+                     <h4 class="cin-heading-5 cin-mb-4" data-translate="main_v2_feature_3_title">🧠 Multi-Environment Support</h4>
+                     <p class="cin-text-muted" data-translate="main_v2_feature_3_desc">Seamless adaptation to any server environment with full compatibility.</p>
+                 </div>
+                 <div class="cin-card cin-text-center">
+                     <h4 class="cin-heading-5 cin-mb-4" data-translate="main_v2_feature_4_title">⚡ Local Self-Sufficiency</h4>
+                     <p class="cin-text-muted" data-translate="main_v2_feature_4_desc">Complete independence from external dependencies for maximum control.</p>
+                 </div>
+                 <div class="cin-card cin-text-center">
+                     <h4 class="cin-heading-5 cin-mb-4" data-translate="main_v2_feature_5_title">⚙️ Parallel Execution</h4>
+                     <p class="cin-text-muted" data-translate="main_v2_feature_5_desc">Advanced parallel processing capabilities for handling multiple tasks simultaneously.</p>
+                 </div>
+                 <div class="cin-card cin-text-center">
+                     <h4 class="cin-heading-5 cin-mb-4" data-translate="main_v2_feature_6_title">🏗️ Layered Architecture</h4>
+                     <p class="cin-text-muted" data-translate="main_v2_feature_6_desc">Modular layered design for better organization and maintainability.</p>
+                 </div>
+                 <div class="cin-card cin-text-center">
+                     <h4 class="cin-heading-5 cin-mb-4" data-translate="main_v2_feature_7_title">🎨 Enhanced UI</h4>
+                     <p class="cin-text-muted" data-translate="main_v2_feature_7_desc">Beautiful and responsive user interface components for modern web applications.</p>
+                 </div>
+                 <div class="cin-card cin-text-center">
+                     <h4 class="cin-heading-5 cin-mb-4" data-translate="main_v2_feature_8_title">🚀 Superior SEO</h4>
+                     <p class="cin-text-muted" data-translate="main_v2_feature_8_desc">Advanced SEO optimization tools for better search engine visibility.</p>
+                 </div>
+             </div>
+        </section>
+
+        <!-- Repositories Section -->
+        <section class="cin-mb-8">
+            <div class="cin-text-center cin-mb-8">
+                <h3 class="cin-heading-2" data-translate="main_v2_repositories_title">Official Repositories</h3>
             </div>
-        </div>
+            <div class="cin-grid cin-grid-cols-1 cin-md-grid-cols-3 cin-gap-6">
+                <div class="cin-card cin-text-center">
+                     <h4 class="cin-heading-5 cin-mb-4" data-translate="main_v2_repo_cli_title">CIN CLI</h4>
+                     <p class="cin-text-muted cin-mb-4" data-translate="main_v2_repo_cli_desc">Command-line interface for framework management and project creation.</p>
+                     <a href="cin-cli.html" class="cin-btn cin-btn-secondary cin-btn-lg">View Repository</a>
+                 </div>
+                 <div class="cin-card cin-text-center">
+                     <h4 class="cin-heading-5 cin-mb-4" data-translate="main_v2_repo_framework_title">CIN Framework</h4>
+                     <p class="cin-text-muted cin-mb-4" data-translate="main_v2_repo_framework_desc">Core framework with all essential components and libraries.</p>
+                     <a href="cin-framework.html" class="cin-btn cin-btn-secondary cin-btn-lg">View Repository</a>
+                 </div>
+                 <div class="cin-card cin-text-center">
+                     <h4 class="cin-heading-5 cin-mb-4" data-translate="main_v2_repo_library_title">CIN Library</h4>
+                     <p class="cin-text-muted cin-mb-4" data-translate="main_v2_repo_library_desc">Collection of ready-to-use libraries for rapid development.</p>
+                     <a href="cin-library.html" class="cin-btn cin-btn-secondary cin-btn-lg">View Repository</a>
+                 </div>
+            </div>
+        </section>
+
+        <!-- Call to Action Section -->
+        <section class="cin-text-center cin-mb-8">
+            <div class="cin-card cin-bg-light">
+                <h3 class="cin-heading-2 cin-mb-4" data-translate="main_v2_cta_title">Get Started Today</h3>
+                <p class="cin-text-lead cin-mb-6" data-translate="main_v2_cta_desc">Join thousands of developers building the future with CIN Framework.</p>
+                <div class="cin-flex cin-flex-wrap cin-justify-center cin-gap-4">
+                    <a href="https://github.com/cin-framework/cin-cli/releases" class="cin-btn cin-btn-primary cin-btn-lg">
+                        <span data-translate="main_v2_download_cli">Download CLI</span>
+                    </a>
+                    <a href="https://discord.gg/shWU2faurw" class="cin-btn cin-btn-secondary cin-btn-lg">
+                         <span data-translate="main_v2_join_community">Join Community</span>
+                     </a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Newsletter Section -->
+         <section class="cin-mb-8">
+             <div class="cin-card cin-bg-light cin-text-center">
+                 <h3 class="cin-heading-3 cin-mb-4" data-translate="main_v2_newsletter_title">Stay Updated</h3>
+                 <p class="cin-text-lead cin-mb-6" data-translate="main_v2_newsletter_desc">Subscribe to our newsletter and be the first to know about CIN Framework updates, new features, and releases.</p>
+                 <form class="cin-max-w-md cin-mx-auto cin-mb-6" onsubmit="handleEmailSubmit(event)">
+                     <div class="cin-input-group">
+                         <input type="email" class="cin-input" data-translate-placeholder="main_v2_newsletter_email_placeholder" placeholder="Enter your email address" required>
+                         <button type="submit" class="cin-btn cin-btn-primary" data-translate="main_v2_newsletter_subscribe">Notify Me</button>
+                     </div>
+                 </form>
+                 <div id="newsletterMessage" style="display: none;" class="cin-alert cin-alert-info"></div>
+                 <div id="subscriptionMessage" class="cin-alert" style="display: none; margin-top: 1rem;"></div>
+                 <p class="cin-text-sm cin-text-muted" data-translate="main_v2_newsletter_privacy">We respect your privacy. Unsubscribe at any time.</p>
+             </div>
+         </section>
+
+         <!-- Contact Section -->
+         <section class="cin-mb-8">
+             <div class="cin-text-center cin-mb-8">
+                 <h3 class="cin-heading-2" data-translate="main_v2_contact_title">Contact Information</h3>
+                 <p class="cin-text-lead cin-text-muted" data-translate="main_v2_contact_desc">Get in touch with our team for support, partnerships, or any questions about CIN Framework.</p>
+             </div>
+             <div class="cin-grid cin-grid-cols-1 cin-md-grid-cols-2 cin-lg-grid-cols-5 cin-gap-6">
+                 <div class="cin-card cin-text-center">
+                     <div class="cin-mb-4">
+                         <div class="cin-w-12 cin-h-12 cin-bg-primary cin-text-white cin-rounded-full cin-flex cin-items-center cin-justify-center cin-mx-auto">
+                             <span class="cin-text-lg">📧</span>
+                         </div>
+                     </div>
+                     <h4 class="cin-heading-6 cin-mb-2" data-translate="main_v2_support_email">Support</h4>
+                     <a href="mailto:support@cin-framework.com" class="cin-text-sm cin-text-primary">support@cin-framework.com</a>
+                 </div>
+                 <div class="cin-card cin-text-center">
+                     <div class="cin-mb-4">
+                         <div class="cin-w-12 cin-h-12 cin-bg-primary cin-text-white cin-rounded-full cin-flex cin-items-center cin-justify-center cin-mx-auto">
+                             <span class="cin-text-lg">💬</span>
+                         </div>
+                     </div>
+                     <h4 class="cin-heading-6 cin-mb-2" data-translate="main_v2_contact_email">Contact</h4>
+                     <a href="mailto:contact@cin-framework.com" class="cin-text-sm cin-text-primary">contact@cin-framework.com</a>
+                 </div>
+                 <div class="cin-card cin-text-center">
+                     <div class="cin-mb-4">
+                         <div class="cin-w-12 cin-h-12 cin-bg-primary cin-text-white cin-rounded-full cin-flex cin-items-center cin-justify-center cin-mx-auto">
+                             <span class="cin-text-lg">⚙️</span>
+                         </div>
+                     </div>
+                     <h4 class="cin-heading-6 cin-mb-2" data-translate="main_v2_admin_email">Admin</h4>
+                     <a href="mailto:admin@cin-framework.com" class="cin-text-sm cin-text-primary">admin@cin-framework.com</a>
+                 </div>
+                 <div class="cin-card cin-text-center">
+                     <div class="cin-mb-4">
+                         <div class="cin-w-12 cin-h-12 cin-bg-primary cin-text-white cin-rounded-full cin-flex cin-items-center cin-justify-center cin-mx-auto">
+                             <span class="cin-text-lg">👨‍💻</span>
+                         </div>
+                     </div>
+                     <h4 class="cin-heading-6 cin-mb-2" data-translate="main_v2_dev_email">Development</h4>
+                     <a href="mailto:dev@cin-framework.com" class="cin-text-sm cin-text-primary">dev@cin-framework.com</a>
+                 </div>
+                 <div class="cin-card cin-text-center">
+                     <div class="cin-mb-4">
+                         <div class="cin-w-12 cin-h-12 cin-bg-primary cin-text-white cin-rounded-full cin-flex cin-items-center cin-justify-center cin-mx-auto">
+                             <span class="cin-text-lg">👨‍🎨</span>
+                         </div>
+                     </div>
+                     <h4 class="cin-heading-6 cin-mb-2" data-translate="main_v2_mawi_email">Mawi Man</h4>
+                     <a href="mailto:mawi@cin-framework.com" class="cin-text-sm cin-text-primary">mawi@cin-framework.com</a>
+                 </div>
+             </div>
+         </section>
+
+        <!-- Footer -->
+        <footer class="cin-text-center cin-py-6 cin-border-t">
+            <div class="cin-text-muted cin-text-sm cin-mb-2" data-translate="main_v2_copyright">© 2025 CIN FRAMEWORK. All rights reserved to Ayoub Alarjani (Mawi Man).</div>
+            <div class="cin-text-muted cin-text-sm" data-translate="main_v2_license">Proprietary License - All rights reserved</div>
+        </footer>
     </main>
     <button class="cin-btn-fab" onclick="scrollToTop()" title="Scroll to top">
         ↑
@@ -65,12 +207,14 @@
     const pageName = location.pathname.split('/').pop().replace('.html', '');
     window.parent.postMessage({ page: pageName }, '*');
   };
+
+
 </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
     <script src="./assets/js/sidebar-min.js"></script>
-    <script src="./assets/js/script-min.js"></script>
-    <script src="./assets/js/Get_Early_Access-min.js"></script>
-    <script src="./assets/js/moroccan-captcha-min.js"></script>
+     <script src="./assets/js/script-min.js"></script>
+     <script src="./assets/js/Get_Early_Access-min.js"></script>
+     <script src="./assets/js/moroccan-captcha-min.js"></script>
 </body>
 </html>
