--- a/main.html
+++ b/main.html
@@ -90,17 +90,17 @@
                 <div class="cin-card cin-text-center">
                      <h4 class="cin-heading-5 cin-mb-4" data-translate="main_v2_repo_cli_title">CIN CLI</h4>
                      <p class="cin-text-muted cin-mb-4" data-translate="main_v2_repo_cli_desc">Command-line interface for framework management and project creation.</p>
-                     <a href="cin-cli.html" class="cin-btn cin-btn-secondary cin-btn-lg">View Repository</a>
+                     <a href="cin-cli.html" class="cin-btn cin-btn-secondary cin-btn-lg" data-translate="read_more">Read More</a>
                  </div>
                  <div class="cin-card cin-text-center">
                      <h4 class="cin-heading-5 cin-mb-4" data-translate="main_v2_repo_framework_title">CIN Framework</h4>
                      <p class="cin-text-muted cin-mb-4" data-translate="main_v2_repo_framework_desc">Core framework with all essential components and libraries.</p>
-                     <a href="cin-framework.html" class="cin-btn cin-btn-secondary cin-btn-lg">View Repository</a>
+                     <a href="cin-framework.html" class="cin-btn cin-btn-secondary cin-btn-lg" data-translate="read_more">Read More</a>
                  </div>
                  <div class="cin-card cin-text-center">
                      <h4 class="cin-heading-5 cin-mb-4" data-translate="main_v2_repo_library_title">CIN Library</h4>
                      <p class="cin-text-muted cin-mb-4" data-translate="main_v2_repo_library_desc">Collection of ready-to-use libraries for rapid development.</p>
-                     <a href="cin-library.html" class="cin-btn cin-btn-secondary cin-btn-lg">View Repository</a>
+                     <a href="cin-library.html" class="cin-btn cin-btn-secondary cin-btn-lg" data-translate="read_more">Read More</a>
                  </div>
             </div>
         </section>
