--- a/cin-cli.html
+++ b/cin-cli.html
@@ -26,10 +26,10 @@
         <!-- Hero Section -->
         <section class="cin-text-center cin-mb-8">
             <div class="cin-hero-badge cin-mb-4">
-                <span>CIN CLI - v2.1.0</span>
+                <span>CIN CLI - v2.3.2</span>
             </div>
             <h1 class="cin-heading-1 cin-mb-4">CIN CLI</h1>
-            <p class="cin-text-lead cin-mb-8 cin-mx-auto" style="max-width: 800px;" data-translate="CIN-CLI هي أداة سطر أوامر شاملة مصممة خصيصًا لإدارة إطار عمل CIN بسهولة وسرعة.">CIN-CLI is a comprehensive command-line tool specifically designed to manage the CIN Framework with ease and speed.</p>
+            <p class="cin-text-lead cin-mb-8 cin-mx-auto" style="max-width: 800px;" data-translate="CIN-CLI هي أداة سطر أوامر شاملة مصممة خصيصًا لإدارة إطار عمل CIN بسهولة وسرعة، مع نظام إدارة المكتبات المتقدم.">CIN-CLI is a comprehensive command-line tool specifically designed to manage the CIN Framework with ease and speed, featuring advanced library management system.</p>
         </section>
             
         <!-- Core Capabilities Section -->
@@ -107,7 +107,7 @@
                     <span>CIN-CLI</span>
                 </div>
                 <div class="cin-card-download-size">
-                    <span data-translate="الإصدار: 2.1.0">Version: 2.1.0</span>
+                    <span data-translate="الإصدار: 2.3.2">Version: 2.3.2</span>
                 </div>
                 <div class="cin-card-download-action">
                     <a href="https://github.com/cin-framework/cin-cli/releases/download/untagged-20b0069fc998cb89a042/cin-cli.exe" style="text-decoration: none;">
