--- a/cin-framework.html
+++ b/cin-framework.html
@@ -25,7 +25,7 @@
     <main class="cin-main">
         <div class="cin-coming-soon cin-fade-in">
             <!-- Version Badge Component -->
-            <div class="cin-hero-badge">
+            <div class="cin-hero-badge cin-mb-4">
                 <span data-translate="🚀 إطار CIN v2.0.0 - أحدث إصدار">🚀 CIN Framework v2.0.0 - Latest Release</span>
             </div>
 
@@ -33,9 +33,7 @@
             <h1 class="cin-heading-1" data-translate="إطار CIN">CIN Framework</h1>
             
             <!-- Lead Text Component -->
-            <p class="cin-text-lead cin-mb-8" data-translate="إطار CIN هو إطار ويب متقدم مبني على PHP، مصمم لدفع حدود تطوير الويب الحديث.">
-                CIN Framework is an advanced web framework built on PHP, designed to push the boundaries of modern web development.
-            </p>
+            <p class="cin-text-lead cin-mb-8 cin-mx-auto" style="max-width: 800px;" data-translate="إطار عمل PHP متقدم مصمم للتطوير السريع والآمن للتطبيقات الحديثة مع دعم كامل لـ Web 4.0 والهندسة المعمارية الحديثة.">An advanced PHP web framework designed for rapid and secure development of modern applications with full Web 4.0 support and modern architectural engineering.</p>
             
             <!-- Official Website Info Alert -->
             <div class="cin-alert cin-alert-info cin-mb-8">
