--- a/main.html
+++ b/main.html
@@ -174,10 +174,9 @@
              </div>
          </section>
 
-        <!-- Footer -->
+                <!-- Footer -->
         <footer class="cin-text-center cin-py-6 cin-border-t">
-            <div class="cin-text-muted cin-text-sm cin-mb-2" data-translate="© 2025 CIN FRAMEWORK — جميع الحقوق محفوظة">© 2025 CIN FRAMEWORK — All Rights Reserved</div>
-            <div class="cin-text-muted cin-text-sm" data-translate="ترخيص الملكية | أيوب العرجاني | ماوي مان">Proprietary License | Ayoub Alarjani | Mawi Man</div>
+            <div class="cin-text-muted cin-text-sm cin-mb-2" data-translate="© CIN FRAMEWORK — جميع الحقوق محفوظة">© CIN FRAMEWORK — All Rights Reserved</div>
         </footer>
     </main>
     <button class="cin-btn-fab" onclick="scrollToTop()" title="Scroll to top">
