--- a/reporting_guidelines.html
+++ b/reporting_guidelines.html
@@ -135,8 +135,8 @@
                     <p class="cin-mb-4" data-translate="قد يتم تحديث هذه الإرشادات في أي وقت. نوصي بمراجعة هذه الصفحة بشكل دوري للاطلاع على أي تغييرات.">
                         These guidelines may be updated at any time. We recommend reviewing this page periodically for any changes.
                     </p>
-                    <p class="cin-text-small" data-translate="آخر تحديث: يناير 2025">
-                        Last updated: January 2025
+                    <p class="cin-text-small" data-translate="آخر تحديث: 2025">
+                        Last updated: 2025
                     </p>
                 </div>
             </div>
@@ -151,8 +151,7 @@
         </div>
                 <!-- Footer -->
         <footer class="cin-text-center cin-py-6 cin-border-t">
-            <div class="cin-text-muted cin-text-sm cin-mb-2" data-translate="© 2025 CIN FRAMEWORK — جميع الحقوق محفوظة">© 2025 CIN FRAMEWORK — All Rights Reserved</div>
-            <div class="cin-text-muted cin-text-sm" data-translate="ترخيص الملكية | أيوب العرجاني | ماوي مان">Proprietary License | Ayoub Alarjani | Mawi Man</div>
+            <div class="cin-text-muted cin-text-sm cin-mb-2" data-translate="© CIN FRAMEWORK — جميع الحقوق محفوظة">© CIN FRAMEWORK — All Rights Reserved</div>
         </footer>
     </main>
     <button class="cin-btn-fab" onclick="scrollToTop()" title="Scroll to top">
