--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,7 @@
             <button class="cin-lang-btn" onclick="setLanguage('ar')">AR</button>
         </div>
     </header>
-    <div id="content-wrapper" class="content-wrapper">
+    <div id="content-wrapper" class="content-wrapper" style="padding-top: 68px;">
         <div class="content-inner">
 <!-- Hero Badge Component -->
             <div class="cin-hero-badge">
