--- a/web/index.html
+++ b/web/index.html
@@ -2,8 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CIN FRAMEWORK - Coming Soon! / إطار عمل CIN - قريباًّ</title>
+    !-- Viewport -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Primary Meta Tags -->
+  <title>CIN Framework – WEB 4 – Powered by Local Self-Sufficiency and Aggressive Security</title>
+  <meta name="title" content="CIN Framework – WEB 4 – Powered by Local Self-Sufficiency and Aggressive Security">
+  <meta name="description" content="CIN Framework is a next-generation PHP-based system designed for dynamic web applications with unmatched security, local self-sufficiency, and Web 4 readiness.">
+  <meta name="keywords" content="CIN Framework, PHP framework, secure PHP, Web 4, local self-sufficiency, aggressive security, CIN Code, Morocin, modern PHP, PSR-12 framework">
+  <meta name="author" content="CIN Framework Team">
+  <meta name="robots" content="index, follow">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://www.cin-framework.com/">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.cin-framework.com/">
+  <meta property="og:title" content="CIN Framework – WEB 4 – Powered by Local Self-Sufficiency and Aggressive Security">
+  <meta property="og:description" content="Unleashing CIN Framework: a powerful self-sufficient PHP system engineered for ultimate security and the new era of the web.">
+  <meta property="og:image" content="https://www.cin-framework.com/assets/img/cin-og-banner.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://www.cin-framework.com/">
+  <meta property="twitter:title" content="CIN Framework – WEB 4 – Powered by Local Self-Sufficiency and Aggressive Security">
+  <meta property="twitter:description" content="Unleashing CIN Framework: a powerful self-sufficient PHP system engineered for ultimate security and the new era of the web.">
+  <meta property="twitter:image" content="https://www.cin-framework.com/assets/img/cin-og-banner.png">
+
+  <!-- Favicons -->
+  <link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon.png">
+
+  <!-- Structured Data: JSON-LD Schema.org -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "CIN Framework",
+    "url": "https://www.cin-framework.com/",
+    "logo": "https://www.cin-framework.com/assets/img/cin-logo.png",
+    "applicationCategory": "Web Development Framework",
+    "operatingSystem": "Cross-platform",
+    "description": "CIN Framework is a PHP-based Web 4 system designed with aggressive security and local self-sufficiency to build next-generation dynamic websites.",
+    "author": {
+      "@type": "Organization",
+      "name": "AYOUB ALARJANI (MAWI MAN)"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "CIN FRAMEWORK"
+    }
+  }
+  </script>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,0..200" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="./assets/css/style.css">
