--- a/web/index.html
+++ b/web/index.html
@@ -21,18 +21,18 @@
   <meta property="og:url" content="https://www.cin-framework.com/">
   <meta property="og:title" content="CIN Framework – WEB 4 – Powered by Local Self-Sufficiency and Aggressive Security">
   <meta property="og:description" content="Unleashing CIN Framework: a powerful self-sufficient PHP system engineered for ultimate security and the new era of the web.">
-  <meta property="og:image" content="https://www.cin-framework.com/assets/img/cin-og-banner.png">
+  <meta property="og:image" content="https://www.cin-framework.com/assets/img/cin/CIN-BNR.svg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://www.cin-framework.com/">
   <meta property="twitter:title" content="CIN Framework – WEB 4 – Powered by Local Self-Sufficiency and Aggressive Security">
   <meta property="twitter:description" content="Unleashing CIN Framework: a powerful self-sufficient PHP system engineered for ultimate security and the new era of the web.">
-  <meta property="twitter:image" content="https://www.cin-framework.com/assets/img/cin-og-banner.png">
+  <meta property="twitter:image" content="https://www.cin-framework.com/assets/img/cin/CIN-BNR.svg">
 
   <!-- Favicons -->
-  <link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon.png">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="/assets/img/cin/CIN.svg">
 
   <!-- Structured Data: JSON-LD Schema.org -->
   <script type="application/ld+json">
@@ -41,7 +41,7 @@
     "@type": "SoftwareApplication",
     "name": "CIN Framework",
     "url": "https://www.cin-framework.com/",
-    "logo": "https://www.cin-framework.com/assets/img/cin-logo.png",
+    "logo": "https://www.cin-framework.com/assets/img/cin/CIN.svg",
     "applicationCategory": "Web Development Framework",
     "operatingSystem": "Cross-platform",
     "description": "CIN Framework is a PHP-based Web 4 system designed with aggressive security and local self-sufficiency to build next-generation dynamic websites.",
